--- a/extensions/core/flyway/adoc/modules/flyway/pages/about.adoc
+++ b/extensions/core/flyway/adoc/modules/flyway/pages/about.adoc
@@ -23,7 +23,7 @@ Also add the following module to your `AppManifest`:
 @Configuration
 @Import({
     ...
-    IsisModuleExtFlywayImpl.class,
+    CausewayModuleExtFlywayImpl.class,
     ...
 })
 public static class AppManifest {
