--- a/extensions/core/quartz/adoc/modules/quartz/pages/about.adoc
+++ b/extensions/core/quartz/adoc/modules/quartz/pages/about.adoc
@@ -125,7 +125,7 @@ If either are used:
 @Configuration
 @Import({
         // ...
-        IsisModuleExtQuartzImpl.class,
+        CausewayModuleExtQuartzImpl.class,
 })
 // ...
 public class AppManifest {
