--- a/extensions/security/shiro-realm-ldap/adoc/modules/shiro-realm-ldap/pages/ldap-realm.adoc
+++ b/extensions/security/shiro-realm-ldap/adoc/modules/shiro-realm-ldap/pages/ldap-realm.adoc
@@ -16,30 +16,30 @@ To use LDAP involves telling Shiro how to instantiate the realm.  This bootstrap
 
 [source,ini]
 ----
-contextFactory = org.apache.causeway.security.shiro.IsisLdapContextFactory
+contextFactory = org.apache.causeway.security.shiro.CausewayLdapContextFactory
 contextFactory.url = ldap://localhost:10389
-contextFactory.systemUsername = uid=admin,ou=system        # <.>
+contextFactory.systemUsername = uid=admin,ou=system                 # <.>
 contextFactory.systemPassword = secret
-contextFactory.authenticationMechanism = CRAM-MD5          # <.>
+contextFactory.authenticationMechanism = CRAM-MD5                   # <.>
 contextFactory.systemAuthenticationMechanism = simple
 
-ldapRealm = org.apache.causeway.security.shiro.IsisLdapRealm   # <.>
+ldapRealm = org.apache.causeway.security.shiro.CausewayLdapRealm    # <.>
 ldapRealm.contextFactory = $contextFactory
 
-ldapRealm.searchBase = ou=groups,o=mojo                    # <.>
-ldapRealm.groupObjectClass = groupOfUniqueNames            # <.>
-ldapRealm.uniqueMemberAttribute = uniqueMember             # <.>
+ldapRealm.searchBase = ou=groups,o=mojo                             # <.>
+ldapRealm.groupObjectClass = groupOfUniqueNames                     # <.>
+ldapRealm.uniqueMemberAttribute = uniqueMember                      # <.>
 ldapRealm.uniqueMemberAttributeValueTemplate = uid={0}
 
 # optional mapping from physical groups to logical application roles
-ldapRealm.rolesByGroup = \                                 # <.>
+ldapRealm.rolesByGroup = \                                          # <.>
     LDN_USERS: user_role,\
     NYK_USERS: user_role,\
     HKG_USERS: user_role,\
     GLOBAL_ADMIN: admin_role,\
     DEMOS: self-install_role
 
-ldapRealm.permissionsByRole=\                              # <.>
+ldapRealm.permissionsByRole=\                                       # <.>
    user_role = *:ToDoItemsJdo:*:*,\
                *:ToDoItem:*:*; \
    self-install_role = *:ToDoItemsFixturesService:install:* ; \
