--- a/extensions/vro/cors/adoc/modules/cors/pages/about.adoc
+++ b/extensions/vro/cors/adoc/modules/cors/pages/about.adoc
@@ -28,7 +28,7 @@ Also add the following module to your `AppManifest`:
 ----
 @Configuration
 @Import({
-        IsisModuleExtCors.class,
+        CausewayModuleExtCors.class,
         ...
 })
 public class AppManifest {
