--- a/extensions/vw/sse/adoc/modules/sse/pages/about.adoc
+++ b/extensions/vw/sse/adoc/modules/sse/pages/about.adoc
@@ -35,7 +35,7 @@ Also add the following module to your `AppManifest`:
 ----
 @Configuration
 @Import({
-        IsisModuleExtSseWicket.class,  // <.>
+        CausewayModuleExtSseWicket.class,  // <.>
         ...
 })
 public class AppManifest {
