--- a/commons/src/main/adoc/modules/commons/pages/about.adoc
+++ b/commons/src/main/adoc/modules/commons/pages/about.adoc
@@ -13,7 +13,7 @@ _Apache Causeway_ developers to run into _jar_ version conflicts, when using one
 3^rd^ party libraries.
 
 It now also allows us to collect utilities in support of common idioms, that we use
-throughout the _Apache Isis_ ecosystem.
+throughout the _Apache Causeway_ ecosystem.
 
 == Packages
 
