--- a/persistence/jdo/adoc/modules/ROOT/pages/hints-and-tips/overriding-jdo-annotations.adoc
+++ b/persistence/jdo/adoc/modules/ROOT/pages/hints-and-tips/overriding-jdo-annotations.adoc
@@ -3,7 +3,7 @@
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-
+WARNING: TODO: to update.
 
 JDO/DataNucleus builds its own persistence metamodel by reading both annotations on the class and also by searching for metadata in XML files.
 The metadata in the XML files takes precedence over the annotations, and so can be used to override metadata that is "hard-coded" in annotations.
@@ -34,14 +34,14 @@ For example, the `AuditEntry` entity in the xref:security:audittrail:about.adoc[
 ----
 @javax.jdo.annotations.PersistenceCapable(
         identityType=IdentityType.DATASTORE,
-        schema = "IsisAddonsAudit",
+        schema = "causewayAddonsAudit",
         table="AuditEntry")
 public class AuditEntry {
     ...
 }
 ----
 
-This will map the `AuditEntry` class to a table `&quot;IsisAddonsAudit&quot;.&quot;AuditEntry&quot;`; that is using a custom schema to own the object.
+This will map the `AuditEntry` class to a table `&quot;CausewayAddonsAudit&quot;.&quot;AuditEntry&quot;`; that is using a custom schema to own the object.
 
 Suppose though that for whatever reason we didn't want to use a custom schema but would rather use the default.
 Also suppose we are using SQL Server as our target database.
