--- a/persistence/jdo/spring/README.adoc
+++ b/persistence/jdo/spring/README.adoc
@@ -8,13 +8,10 @@ footnote:[https://github.com/spring-projects/spring-framework/issues/18702[Sprin
 
 Credits to the original authors!
 
-The following is an adoption of the original
-footnote:[https://docs.spring.io/spring-framework/docs/3.0.0.RC2/reference/html/ch13s04.html[docs.spring.io]]
-documentation.
+The following is an adoption of the originalfootnote:[https://docs.spring.io/spring-framework/docs/3.0.0.RC2/reference/html/ch13s04.html[docs.spring.io]]documentation.
 
-WARNING: With the XML examples, former package names `org.springframework.orm.jdo` have not been corrected to their forked
-correspondents in `org.apache.causeway.persistence.jdo.spring`. Likewise with the descriptive text, some references pointing
-to _Spring_ have not been corrected to point to _Apache Isis_.
+WARNING: With the XML examples, former package names `org.springframework.orm.jdo` have not been corrected to their forked correspondents in `org.apache.causeway.persistence.jdo.spring`.
+Likewise with the descriptive text, some references pointing to _Spring_ have not been corrected to point to _Apache Causeway_.
 
 == JDO
 
