--- a/security/keycloak/src/main/adoc/modules/keycloak/pages/about.adoc
+++ b/security/keycloak/src/main/adoc/modules/keycloak/pages/about.adoc
@@ -29,7 +29,7 @@ In the webapp module of your application, add the following dependency:
 
 == Update AppManifest
 
-In your application's `AppManifest` (top-level Spring `@Configuration` used to bootstrap the app), import the `IsisModuleSecurityKeycloak` module and remove any other `IsisModuleSecurityXxx` modules.
+In your application's `AppManifest` (top-level Spring `@Configuration` used to bootstrap the app), import the `CausewayModuleSecurityKeycloak` module and remove any other `CausewayModuleSecurityXxx` modules.
 
 [source,java]
 .AppManifest.java
@@ -37,7 +37,7 @@ In your application's `AppManifest` (top-level Spring `@Configuration` used to b
 @Configuration
 @Import({
         ...
-        IsisModuleSecurityKeycloak.class,
+        CausewayModuleSecurityKeycloak.class,
         ...
 })
 public class AppManifest {
@@ -53,14 +53,14 @@ Also, as this module provides no implementation of the xref:refguide:core:index/
 @Configuration
 @Import({
         ...
-        IsisModuleSecurityKeycloak.class,   // <.>
+        CausewayModuleSecurityKeycloak.class,   // <.>
         AuthorizorBypass.class,             // <.>
         ...
 })
 public class AppManifest {
 }
 ----
-<.> make sure that no other `IsisModuleSecurityXxx` module is imported.
+<.> make sure that no other `CausewayModuleSecurityXxx` module is imported.
 <.> or some other implementation of `Authorizor`.
 
 
